--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Guess The Number (1 - 100)</h1>
     </div>
     <div class="main">
-      <input type="number" id="guess" />
+      <input type="number" id="input" />
       <button type="submit" id="submit">CHECK</button>
     </div>
     <div class="magic">
